2010-03-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Overhaul "keyword-substitution mode name" recognition.

	* b-anchor.c (kwsub_pool): New static `uint8_t' array.
	(recognize_kwsub, kwsub_string): New funcs.
	* base.h (recognize_kwsub): New func decl.
	(str2expmode): New macro.
	(kwsub_string): New func decl.
	(str2expmode): Delete func decl.
	* rcsgen.c (putadmin): Use `kwsub_string'.
	* rcssyn.c (expand_names): Delete data structure.
	(strn2expmode, str2expmode): Delete funcs.
	(getadmin): Use `recognize_kwsub'.
	* rlog.c (main): Use `kwsub_string'.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Overhaul (working file) keyword recognition.

	* b-anchor.c: New file.
	* Makefile.am (libparts_a_SOURCES):
	Add b-anchor.c; remove rcskeys.c.
	* base.h: #include <stdint.h>.
	(AUTHOR, DATE, HEADER, IDH, LOCKER, LOG, NAME, RCSFILE, REVISION)
	(SOURCE, STATE): Delete #define:s.
	(tinysym, pool_found): New structs.
	(markers): From this enum, remove `Nomatch'.
	(recognize_keyword): New func decl.
	(Keyword): Delete var decl.
	(trymatch): Delete func decl.
	* rcsedit.c (keyreplace): Take `struct pool_found *'
	for first arg instead of `enum markers'; use `marker->i'.
	(expandline): Use `recognize_keyword'.
	* rcsfcmp.c (rcsfcmp): Use `recognize_keyword', `match1.i'.
	* rcskeep.c (getoldkeys): Use `recognize_keyword'.
	* rcskeys.c: Delete file.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Rename rcsbase.h to base.h.

	* base.h: Rename from rcsbase.h.
	* Makefile.am (libparts_a_SOURCES): Update.
	* ci.c: Update #include.
	* co.c: Likewise.
	* gnu-h-v.c: Likewise.
	* ident.c: Likewise.
	* maketime.c: Likewise.
	* merge.c: Likewise.
	* merger.c: Likewise.
	* partime.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfcmp.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcskeys.c: Likewise.
	* rcslex.c: Likewise.
	* rcsmap.c: Likewise.